# voicebot

./: .env  .env.example  .gitignore  .runner  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  COREML_SETUP.md  Cargo.toml  Cargo.toml.patch  Cross.toml  LICENSE-VOICEBOT.md  build.rs  doc.env  install-gitea.sh  install.sh  mac-voicebot.sh  readme.md  secondary-agent.md  seconday-agent.md  voicebot-architecture.md
.claude/: settings.json
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
.opencode/plans/: live-acp-session-viewer.md
.sisyphus/notepads/doc-review/: learnings.md
.sisyphus/run-continuation/: ses_1f48e684bffeiXqED3tTDkKzMe.json  ses_1f4910188ffeUOZWTqbKJq19Wc.json  ses_1f4db98d5ffeql75uMvbP1ickf.json
cross/: Dockerfile.aarch64
data/: speaker.emb  voicebot.db
doc/: ANALISIS-MEJORAS-VOICEBOT.md  APPLE_WATCH_CLIENT.md  ARCHITECTURE.md  MAIN_PROCESS.md  PROCESS_ARCHITECTURE.md  PROJECT_STRUCTURE.md  PROTOCOL_INFO.md  PUBLISHING.md  RECOMMENDED_LLM_PARAMS.md  doc.md  e2e.md  testing_strategy.md  voicebot_post.md
examples/: control_client_example.rs  test_formula1_demo.rs  test_formula1_search.rs
provider/: server.py
scripts/: bench-llama.sh  bench-mlx-context.sh  bench-mlx.sh  bench-models.py  bench-omlx-models.py  bench-omlx-models.sh  bench-omlx.sh  bench-server.py  config.yaml  piper.sh  start-llm.sh  start-mlx-lm.sh  start-omlx.sh  test-installers.sh
scripts/prompt-evaluator/: config.yaml  eval_prompts.py  fixtures.json  prompts.json
src/: audio_capture.rs  audio_transform.rs  config.rs  daemon.rs  e2e_tests.rs  eyes.rs  i18n.rs  lib.rs  main.rs  system_state.rs  websocket_client.rs
src/agents/: config.rs  display_worker.rs  mod.rs  session_events.rs  session_manager.rs
src/analysis/: identity.rs  mod.rs
src/audio/: ambient_buffer.rs  audio_capture.rs  audio_transform.rs  buffer.rs  mod.rs  output.rs  speaker.rs  vad.rs
src/control/: api.rs  broadcast.rs  client.rs  mod.rs  state.rs
src/db/: database.rs  mod.rs
src/llm/: client.rs  manager.rs  mod.rs  session.rs
src/mcp/: mod.rs
src/memory/: mod.rs
src/pipeline/: consolidation.rs  frames.rs  fsm.rs  llm_task.rs  mod.rs  sen_task.rs  state.rs  tts_task.rs
src/profile/: mod.rs
src/remote/: protocol.rs  server.rs
src/s2s/: adapter.rs  mod.rs
src/s2s/models/: lfm.rs
src/stt/: mod.rs  parakeet.rs  provider.rs  stream.rs  whisper.rs  whisper_plus.rs
src/tools/: calendar.rs  clipboard.rs  conversation_mode.rs  current_time.rs  mcp_tool.rs  mod.rs  open_app.rs  read_file.rs  run_agent.rs  run_shell.rs  send_notification.rs  take_screenshot.rs  web_search.rs
src/tts/: avspeech.rs  kokoro.rs  mod.rs  piper.rs  say.rs  sentence.rs
src/tui/: app.rs  events.rs  input.rs  mod.rs  ui.rs
tests/: integration_audio_s2s.rs
