[package]
name = "voicebot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio capture / playback
cpal = "0.17"

# Audio resampling
rubato = "0.15"

# Environment and configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async channels and futures
async-channel = "2"
async-trait = "0.1"
futures-util = "0.3"

# DB
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "=0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4"] }

# Voice Activity Detection (Silero)
voice_activity_detector = "0.2"

# HTTP client for LLM streaming (SSE)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Base64 encoding (screenshot → vision model)
base64 = "0.22"

# STT — whisper.cpp embedded (CoreML Neural Engine on Apple Silicon)
# CoreML replaces the encoder with a compiled .mlmodelc model, using the
# Neural Engine + GPU together. The .mlmodelc must sit alongside the .bin file:
#   models/ggml-<name>-encoder.mlmodelc
# Convert with: xcrun coremltools or the whisper.cpp script (convert-whisper-to-coreml.py)
# whisper-rs = { version = "0.15", features = ["coreml"] }
whisper-rs = { version = "0.15", features = ["coreml", "metal"] }
# Or metal
# whisper-rs = { version = "0.15", features = ["metal"] }

# Sentence boundary detection for TTS streaming
regex = "1"

# TTS — Kokoro (optional, enable with: cargo build --features kokoro)
# Requires: brew install espeak-ng
# Models: kokoro-v1.0.onnx + voices-v1.0.bin (download from HuggingFace)
kokorox = { version = "0.1", optional = true }

# Speaker verification (optional, enable with: cargo build --features speaker)
# Requires: models/speaker_embedding.onnx (sherpa-onnx speaker-id model)
sherpa-rs = { version = "0.6.8", optional = true }

# TTS — macOS AVSpeechSynthesizer native bindings (optional, enable with: cargo build --features avspeech)
# Uses objc2 for safe ObjC FFI into AVFAudio framework.
objc2 = { version = "0.6", optional = true }
block2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"], optional = true }
objc2-avf-audio = { version = "0.3.1", features = [
    "AVSpeechSynthesis",   # AVSpeechSynthesizer, AVSpeechUtterance, AVSpeechSynthesisVoice
    "AVAudioBuffer",       # AVAudioBuffer + AVAudioPCMBuffer
    "AVAudioFormat",       # AVAudioFormat.sampleRate()
    "AVAudioTypes",        # AVAudioFrameCount
    "block2",              # DynBlock callback type for writeUtterance:toBufferCallback:
], optional = true }

[features]
kokoro = ["dep:kokorox"]
speaker = ["dep:sherpa-rs"]
avspeech = ["dep:objc2", "dep:block2", "dep:objc2-foundation", "dep:objc2-avf-audio"]

[dev-dependencies]
# Mock HTTP server for LLM client integration tests
wiremock = "0.6"
# Safe env-var overrides in parallel tests
temp-env = "0.3"
# Temporary directories for file I/O tests
tempfile = "3"
# WAV file loading for e2e audio fixtures
hound = "3"
