[package]
name = "voicebot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/danielvela/voicebot"
homepage = "https://github.com/danielvela/voicebot"
documentation = "https://github.com/danielvela/voicebot"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio capture / playback
cpal = "0.17"

# Audio resampling
rubato = "0.15"

# Environment and configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async channels and futures
async-channel = "2"
async-trait = "0.1"
futures-util = "0.3"

# DB
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "=0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"

# HTTP client for LLM streaming (SSE)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Base64 encoding (screenshot → vision model)
base64 = "0.22"

# STT — whisper-cpp-plus (true streaming audio-to-text with VAD support)
# On macOS: enable Metal GPU acceleration for whisper-cpp-plus
[target.'cfg(target_os = "macos")'.dependencies.whisper-cpp-plus]
version = "0.1.4"
features = ["metal"]

# On Linux: CPU-only backend  
[target.'cfg(not(target_os = "macos"))'.dependencies.whisper-cpp-plus]
version = "0.1.4"

[dependencies.regex]
version = "1"

# TTS — Kokoro (optional, enable with: cargo build --features kokoro)
# Requires: brew install espeak-ng
# Models: kokoro-v1.0.onnx + voices-v1.0.bin (download from HuggingFace)
[dependencies.kokorox]
version = "0.1"
optional = true

# Speaker verification (optional, enable with: cargo build --features speaker)
# Requires: models/speaker_embedding.onnx (sherpa-onnx speaker-id model)
[dependencies.sherpa-rs]
version = "0.6.8"
optional = true

# TUI — terminal user interface (optional, enable with: cargo build --features tui)
[target.'cfg(not(target_os = "macos"))'.dependencies.ratatui]
version = "0.29"
optional = true

[target.'cfg(not(target_os = "macos"))'.dependencies.crossterm]
version = "0.28"
features = ["event-stream"]
optional = true

# Remote device WebSocket server (optional, enable with: cargo build --features remote)
[target.'cfg(not(target_os = "macos"))'.dependencies.axum]
version = "0.8"
features = ["ws"]
optional = true

[target.'cfg(not(target_os = "macos"))'.dependencies.tower]
version = "0.5"
optional = true

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
block2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"], optional = true }
objc2-avf-audio = { version = "0.3.1", features = [
    "AVSpeechSynthesis",   # AVSpeechSynthesizer, AVSpeechUtterance, AVSpeechSynthesisVoice
    "AVAudioBuffer",       # AVAudioBuffer + AVAudioPCMBuffer
    "AVAudioFormat",       # AVAudioFormat.sampleRate()
    "AVAudioTypes",        # AVAudioFrameCount
    "block2",              # DynBlock callback type for writeUtterance:toBufferCallback:
], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }

[features]
kokoro = ["dep:kokorox"]
speaker = ["dep:sherpa-rs"]
avspeech = ["dep:objc2", "dep:block2", "dep:objc2-foundation", "dep:objc2-avf-audio"]
tui = ["dep:ratatui", "dep:crossterm"]
remote = ["dep:axum", "dep:tower"]
control = ["dep:axum", "dep:tower"]

[[bin]]
name = "voicebot"
path = "src/main.rs"

[[bin]]
name = "acp_agent_chat"
path = "src/bin/acp_agent_chat.rs"

[dependencies.hound]
version = "3"

[dev-dependencies]
# Mock HTTP server for LLM client integration tests
wiremock = "0.6"
# Safe env-var overrides in parallel tests
temp-env = "0.3"
# Temporary directories for file I/O tests
tempfile = "3.27.0"
